# qmprs

./: .gitignore  .krbackup.txt  CONTRIBUTING.md  DEVELOPING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish-pypi.yml  tests.yml
KRRT relevant notebooks/: Creating and Manipulating MPS.ipynb  Testing different frameworks.ipynb  sequential_encoding_updated.prof
notebooks/: Creating and Manipulating MPS.ipynb  Dev's notebook.ipynb  State Preparation using MPS Sequential.ipynb
qmprs/: __init__.py
qmprs/mpo/: __init__.py  mpo.py
qmprs/mps/: __init__.py  mps.py
qmprs/primitives/: __init__.py  mpo.py  mps.py
qmprs/synthesis/: __init__.py  mpo_encoder.py  mps_encoder.py  mps_utils.py
qmprs/synthesis/mps_encoding/: __init__.py  base.py  sequential.py  tree_RG_randMPS_d2hD_send.py  tree_rg.py
stubs/qmprs/: __init__.pyi
stubs/qmprs/primitives/: __init__.pyi  mps.pyi
stubs/qmprs/synthesis/: __init__.pyi
stubs/qmprs/synthesis/mps_encoding/: __init__.pyi  base.pyi  sequential.pyi
tests/: __init__.py
tests/primitives/: __init__.py  test_mps.py  utils.py
tests/synthesis/: __init__.py
tests/synthesis/mps_encoding/: __init__.py  test_encoding.py  test_sequential_encoding.py
